--- a/css/style.css
+++ b/css/style.css
@@ -549,6 +549,7 @@ body.lock {
   top: 1.4285714286rem;
   color: white;
   font-size: 1.4285714286rem;
+  background-color: transparent;
 }
 
 .entrance-title {
